crates/sgf-core/tests/snapshots/ops_add_body/planet_added_to_4_4_system_8.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Added planet #8403 to system #8 (pc_toxic, size 15) at orbit 210 at 45°
inverse: RemoveAddedBody { planet: 8403 }

--- gamestate
+++ gamestate
@@ -29431,6 +29431,7 @@
 		planet=156
 		planet=157
 		planet=158
+		planet=8403
 		star_class="sc_a"
 		hyperlane=
 		{
@@ -530216,6 +530217,50 @@
 				4988 
 			}
 		}
+		8403=
+		{
+			planet_class="pc_toxic"
+			planet_size=15
+			carrier_binary_flags=1
+			name=
+			{
+				key="PLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="PRESCRIPTED_system_name_xt489"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="IX"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=148.49242
+				y=148.49242
+				origin=8
+			}
+			orbit=210
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=0
+		}
 	}
 }
 astral_rifts=
